# metaforge

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
backend/: check_env.py  pyproject.toml  run_api.py
backend/src/metaforge/: __init__.py
backend/src/metaforge/api/: __init__.py  app.py
backend/src/metaforge/auth/: __init__.py  dependencies.py  endpoints.py  jwt_service.py  middleware.py  password.py  permissions.py  types.py
backend/src/metaforge/cli/: __init__.py  main.py  mcp_cmd.py  metadata_cmd.py  migrate_cmd.py
backend/src/metaforge/core/: __init__.py  types.py
backend/src/metaforge/hooks/: __init__.py  registry.py  service.py  types.py
backend/src/metaforge/mcp/: __init__.py  __main__.py  bootstrap.py  server.py
backend/src/metaforge/metadata/: __init__.py  loader.py  validator.py
backend/src/metaforge/migrations/: __init__.py  diff.py  env.py  generator.py  runner.py  snapshot.py  types.py
backend/src/metaforge/persistence/: __init__.py  adapter.py  config.py  postgresql.py  sequences.py  sqlite.py
backend/src/metaforge/screens/: __init__.py  endpoints.py  (+2 more)
backend/tests/: test_acknowledgment.py  test_api_integration.py  test_cli.py  test_diff.py  test_expressions.py  test_field_constraints.py  test_generator.py  test_hooks.py  test_mcp_server.py  test_metadata_validator.py  test_migrate_cli.py  test_permissions.py  test_persistence_protocol.py  test_postgresql_adapter.py  test_runner.py  test_saved_config_store.py  test_screens.py  test_sequences.py  test_services.py  test_snapshot.py  test_validators.py  test_view_loader.py  test_views_api.py
(+152 files in other folders)
