[project]
name = "metaforge"
version = "0.1.0"
description = "A metadata-driven full-stack framework for data-centric web applications"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "pyyaml>=6.0.0",
    "pydantic>=2.0.0",
    "alembic>=1.13.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.0.0",
    "pyjwt>=2.8.0",
    "click>=8.0.0",
    "fastmcp>=2.0.0",
]

[project.scripts]
metaforge = "metaforge.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
